--- a/public/stats.html
+++ b/public/stats.html
@@ -31,6 +31,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.0/dist/chart.min.js"></script>
     <script src="./js/api.js"></script>
-    <script src="./js/exercise.js"></script>
+    <script src="./js/stats.js"></script>
   </body>
 </html>
